Fixed: plotly go generalisation, broken test_tabs.py unit tests, Changed: layout of sidebar to be left aligned

--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -18,7 +18,7 @@ body {
   padding: 2rem 1rem;
   background-color: rgb(241, 241, 241);
   color: #3c9639;
-  text-align: center;
+  text-align: left;
   overflow-y: auto;
 }
 
